# rust-adventures

./: README.md
24daysofrust-v1/: README.md
_data/: pokemon-small.json  pokemon.json
a-gentle-introduction-to-rustlang/: Cargo.toml  README.md
a-gentle-introduction-to-rustlang/src/: main.rs
audio-playground/: .gitignore  Cargo.toml  README.md
audio-playground/assets/: clothes.json
audio-playground/data/: audio.json
audio-playground/src/: indexing.rs  lib.rs  main.rs  reader.rs  schema.rs  search_query.rs  settings.rs  utils.rs
baris-playground/: .gitignore  Cargo.toml  README.md
baris-playground/src/: main.rs
data-scraping-shhh/: Cargo.toml  README.md
data-scraping-shhh/src/: main.rs  types.rs
domain-patterns/: Cargo.toml  README.md
domain-patterns/src/: main.rs
domain-patterns/src/domains/: car.rs
file-fun/: Cargo.toml  README.md
file-fun/src/: main.rs
file-watcher/: .gitignore  Cargo.toml
file-watcher/src/: main.rs  store.rs
fuzzy-emoji/: Cargo.toml  emojis.json
fuzzy-emoji/src/: main.rs
github-api/: Cargo.toml
github-api/src/: main.rs
hsb-to-hsl/: Cargo.toml
hsb-to-hsl/src/: main.rs
json-search/: .gitignore  Cargo.toml  README.md
json-search/data/: example.json
json-search/src/: main.rs  types.rs
pokedex/: Cargo.toml
pokedex/src/: main.rs
rust-crash-course-by-traversy-media/: Cargo.toml  README.md
rust-crash-course-by-traversy-media/src/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  main.rs  pointer_ref.rs  strings.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
rustlings/exercises/: test1.rs
rustlings/exercises/enums/: enums1.rs  enums3.rs
rustlings/exercises/error_handling/: errors1.rs  errors2.rs  errors3.rs  errorsn.rs
rustlings/exercises/functions/: functions3.rs
rustlings/exercises/move_semantics/: move_semantics2.rs  move_semantics4.rs
rustlings/exercises/primitive_types/: primitive_types2.rs
rustlings/exercises/structs/: structs1.rs  structs2.rs
rustlings/exercises/tests/: tests2.rs  tests3.rs
sf-api/: .env.example  .gitignore  Cargo.toml  README.md
sf-api/src/: client.rs  communities.rs  json_methods.rs  main.rs  mod.rs  sobjects.rs
sfdx-list/: Cargo.toml  README.md
sfdx-list/src/: main.rs  schema.rs
sfdx-open/: Cargo.toml  README.md
sfdx-open/src/: auth.rs  main.rs
sfdx-project/: .env.example  Cargo.toml  README.md
sfdx-project/src/: main.rs
soup-web-scrape-test/: Cargo.toml
soup-web-scrape-test/src/: main.rs
start-my-day/: Cargo.toml  README.md  config.toml
start-my-day/src/: main.rs
ts-file-reader/: Cargo.toml  README.md  test.d.ts  test.ts
ts-file-reader/src/: main.rs
yt-dl/: Cargo.toml  README.md
yt-dl/src/: main.rs
