[package]
name = "audio-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = { version="0.20.0" }
futures = "0.3"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tantivy = "0.17.0"
audiotags = "0.4.1"
tempfile = "3.3.0"
chrono = "0.4.22"