[package]
name = "audio-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tantivy = "0.17.0"
audiotags = "0.4.1"
tempfile = "3.3.0"
chrono = "0.4.22"
jwalk = "0.6.0"
regex = "1.6.0"
log = "0.4"