[package]
name = "baris-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
colored = "2.0.0"
# baris = { version = "0.1.0", path = "./baris" }
