[package]
name = "data-scraping-shhh"
version = "0.1.0"
edition = "2021"
description = "Scraping some data, shhh 🤫"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.44"
http = "0.2.6"
colored = "2.0.0"
