[package]
name = "file-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.6.0"
lazy_static = "1.4.0"
log = "0.4"
notify = "4.0.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"