[package]
name = "random-rust"
version = "0.1.0"
authors = ["Luke Secomb <luke.secomb@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9"
tokio = { version = "0.2", features = ["macros"] }
reqwest = {version = "0.10.0", features = ["json", "blocking"]}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"