[package]
name = "sf-api"
version = "0.1.0"
edition = "2021"
description = "Experimenting with the Salesforce REST API"
license = "MIT"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.44"
http = "0.2.6"
colored = "2.0.0"
