[package]
name = "sfdx-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
scan_dir = "0.3.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde-xml-rs = "0.5.1"
colored = "2.0.0"