[package]
name = "random-rust"
version = "0.1.0"
authors = ["Luke Secomb <luke.secomb@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "0.5.2"
colored = "1.9"